# my-nano-gpt

./: gpt-dev.ipynb  pyproject.toml
