[tool.poetry]
name = "my-nano-gpt"
version = "0.1.0"
description = ""
authors = ["Michael Valladolid <mikevalladolid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
